--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.servlet.multipart.max-request-size=1GB
+spring.servlet.multipart.max-file-size=1GB
 spring.cache.type=caffeine
+boost.upload.dir=/tmp
