--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,15 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
+    <resources>
+        <resource>
+            <filtering>true</filtering>
+            <directory>src/main/resources</directory>
+            <includes>
+                <include>application.properties</include>
+            </includes>
+        </resource>
+    </resources>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -48,9 +56,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
