--- a/boost-backend/pom.xml
+++ b/boost-backend/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>jjwt-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
         </dependency>
@@ -122,28 +126,30 @@
                 </executions>
             </plugin>
             <plugin>
-         <artifactId>maven-resources-plugin</artifactId>
-            <version>3.1.0</version>         
-          <executions>
-            <execution>
-               <id>copy-resources</id>
-               <phase>validate</phase>
-               <goals>
-                  <goal>copy-resources</goal>
-               </goals>
-               <configuration>
-                  <outputDirectory>${project.build.directory}/classes/resources/</outputDirectory>
-                  <resources>
-                     <resource>
-                        <directory>${project.parent.basedir}/boost-frontend/src/main/web/dist/boost-portal/</directory>
-                     </resource>
-                  </resources>
-               </configuration>
-            </execution>
-         </executions>
-      </plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/classes/resources/</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>
+                                        ${project.parent.basedir}/boost-frontend/src/main/web/dist/boost-portal/
+                                    </directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-    
+
 
 </project>
