--- a/boost-frontend/src/main/web/package.json
+++ b/boost-frontend/src/main/web/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
-    "amplitudejs": "^5.0.2",
+    "ngx-autosize": "^1.6.3",
     "ngx-json-viewer": "^2.4.0",
     "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
