--- a/boost-frontend/src/main/web/package.json
+++ b/boost-frontend/src/main/web/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "angular-autofocus-fix": "^0.1.0",
     "ngx-autosize": "^1.6.3",
     "ngx-json-viewer": "^2.4.0",
     "ngx-pagination": "^4.1.0",
