--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.googlecode.soundlibs</groupId>
+                <artifactId>mp3spi</artifactId>
+                <version>1.9.5.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.googlecode.soundlibs</groupId>
+                <artifactId>tritonus-share</artifactId>
+                <version>0.3.7.4</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring.boot.starter.version}</version>
