--- a/boost-frontend/src/main/web/package.json
+++ b/boost-frontend/src/main/web/package.json
@@ -19,10 +19,16 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "angular-autofocus-fix": "^0.1.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "ngx-autosize": "^1.6.3",
     "ngx-json-viewer": "^2.4.0",
     "ngx-pagination": "^4.1.0",
+    "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
