--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,24 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.starter.version>2.1.7.RELEASE</spring.boot.starter.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <url>http://packages.confluent.io/maven/</url>
+        </repository>
+    </repositories>
     <dependencyManagement>
-        <dependencies>
+        <dependencies><!-- avro dependencies -->
+            <dependency>
+                <groupId>org.apache.avro</groupId>
+                <artifactId>avro</artifactId>
+                <version>1.9.0</version>
+            </dependency>
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>kafka-avro-serializer</artifactId>
+                <version>2.0.1</version>
+            </dependency>
             <dependency>
                 <groupId>com.googlecode.soundlibs</groupId>
                 <artifactId>mp3spi</artifactId>
