--- a/boost-backend/src/main/resources/application-dev.yml
+++ b/boost-backend/src/main/resources/application-dev.yml
@@ -39,7 +39,8 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL9Dialect
+        #dialect: org.hibernate.dialect.PostgreSQL9Dialect
+        dialect: tech.artcoded.boost.common.config.CustomPostgreSqlDialect
         temp:
           use_jdbc_metadata_defaults: false
     show-sql: true
