--- a/boost-backend/pom.xml
+++ b/boost-backend/pom.xml
@@ -11,7 +11,16 @@
     <artifactId>boost-portal-backend</artifactId>
     <name>Boost Portal Backend</name>
     <description>Boost your day with an Audio book</description>
-
+    <licenses>
+        <license>
+            <url>https://creativecommons.org/licenses/by-nc-nd/3.0/</url>
+            <name>Attribution-NonCommercial-NoDerivs 3.0 Unported</name>
+            <comments>
+                (c) Artcoded - 2019
+                Author: Nordine BIttich
+            </comments>
+        </license>
+    </licenses>
     <dependencies>
         <dependency>
             <groupId>com.googlecode.soundlibs</groupId>
@@ -132,6 +141,7 @@
     </dependencies>
 
     <build>
+        <finalName>artcoded-boost</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.avro</groupId>
