--- a/boost-frontend/src/main/web/package.json
+++ b/boost-frontend/src/main/web/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.1.0",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "angular-autofocus-fix": "^0.1.0",
     "bootstrap": "^4.3.1",
