current chapter reading

--- a/boost-backend/pom.xml
+++ b/boost-backend/pom.xml
@@ -23,6 +23,11 @@
     </licenses>
     <dependencies>
         <dependency>
+            <groupId>com.github.slugify</groupId>
+            <artifactId>slugify</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.googlecode.soundlibs</groupId>
             <artifactId>mp3spi</artifactId>
         </dependency>
