--- a/boost-backend/src/main/resources/application-dev.yml
+++ b/boost-backend/src/main/resources/application-dev.yml
@@ -1,6 +1,8 @@
+
 server:
   port: 8070
 spring:
+
   cache:
     type: caffeine
   servlet:
@@ -30,7 +32,9 @@ spring:
     show-sql: true
   resources:
     add-mappings: true # remove in case the frontend is running separately
-
+jackson:
+  serialization:
+    FAIL_ON_EMPTY_BEANS: false
 application:
   title: Boost!
   version: v0.0.1-SNAPSHOT
