prepare current time & top 3

--- a/boost-backend/src/main/resources/application-dev.yml
+++ b/boost-backend/src/main/resources/application-dev.yml
@@ -5,6 +5,9 @@ spring:
 
   cache:
     type: caffeine
+    caffeine:
+      spec: maximumSize=500, expireAfterAccess=30s
+    cache-names: bookTop3Stars, book, uploads
   servlet:
     multipart:
       max-file-size: 1GB
