--- a/boost-frontend/src/main/web/package.json
+++ b/boost-frontend/src/main/web/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "angular-autofocus-fix": "^0.1.0",
     "bootstrap": "^4.3.1",
+    "flag-icon-css": "^3.3.0",
     "jquery": "^3.4.1",
     "ngx-autosize": "^1.6.3",
     "ngx-json-viewer": "^2.4.0",
