--- a/boost-frontend/package.json
+++ b/boost-frontend/package.json
@@ -24,15 +24,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "bootstrap": "^4.3.1",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
     "event-source-polyfill": "^1.0.26",
     "flag-icon-css": "^4.1.7",
     "ngx-autofocus-fix": "^1.0.4",
     "ngx-autosize": "^1.8.7",
     "ngx-json-viewer": "^3.0.2",
     "ngx-pagination": "^5.1.1",
-    "popper": "^1.0.1",
-    "popper.js": "^1.16.1",
     "rxjs": "~7.5.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.11.5"
