--- a/boost-frontend/tsconfig.json
+++ b/boost-frontend/tsconfig.json
@@ -7,17 +7,35 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module": "esnext",
+    "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "target": "es2015",
     "lib": [
-      "es2020",
+      "es2018",
       "dom"
-    ]
+    ],
+
+    "paths": {
+      "@core/*": [
+        "./src/app/core/*"
+      ],
+      "@service/*": [
+        "./src/app/service/*"
+      ],
+      "@shared/*": [
+        "./src/app/shared/*"
+      ],
+      "@init/*": [
+        "./src/app/init/*"
+      ],
+      "@env/*": [
+        "./src/environments/*"
+      ],
+      "@feat/*": [
+        "./src/app/feat/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
