--- a/boost-frontend/package.json
+++ b/boost-frontend/package.json
@@ -8,7 +8,8 @@
     "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "format:fix": "pretty-quick --staged"
   },
   "private": true,
   "dependencies": {
@@ -46,6 +47,7 @@
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~17.0.24",
     "codelyzer": "^6.0.2",
+    "husky": "^7.0.4",
     "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.18",
@@ -53,6 +55,9 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.3",
